--- a/DisplayInfo.css
+++ b/DisplayInfo.css
@@ -9,6 +9,7 @@ h1{
     color: cyan;
     -webkit-text-stroke: 1px black;
     margin-bottom: 10px;
+    text-align: center;
 
 }
 
@@ -18,29 +19,38 @@ h1{
     border-radius: 10px;
     padding: 20px;
     border: 5px lightcyan solid;
-    height: 450px;
+    height: 465px;
     width: 600px;
     font-size: 20px;
+    margin: auto;
     
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
-#content {
+.display{
     display: inline-block;
-    margin-bottom: 0px;
-    margin-top: 5px;
-    width: 200px;
+    width: 300px;
+    margin: 0%;
+}   
+
+.label {
+    display: inline-block;
+    width: 250px;
+    margin: 0%;
 }
 
+.deduction {
+    text-align: end;
+}
 
-
+h3 {
+    width: 450px;
+}
 .result {
-    display: flex;
-    justify-content: center;
+    margin-bottom: 5px;
+}
+
+.output {
+    display: inline-block;
+    width: 144px;
+    margin: 0%;
 }
